# OpenSeeFace

./: .gitignore  README.md  README_en.md  README_zh.md  facetracker.py  pyproject.toml  retinaface.py  start_opensseface.sh  tracker.py
Docs/: CHANGELOG.md  EXPERIENCE.md  OPTIMIZATION_REPORT.md
models/: lm_model0_gpu.onnx  mnv3_detection_gpu.onnx  mnv3_gaze32_split_gpu.onnx  retinaface_640x640_gpu.onnx
